# rag-baseline

./: 01-Test-Dataset-Generator-RAGAS.ipynb  LayoutDataset.py  PDFLayoutAnalysis.py  README.md  baseline.py  main-la.py  pyproject.toml  setup_poetry.sh  st_chatbot.py
data-parse/card/0_iM Social Worker카드/: parse_results.html  parse_results.json  parse_results.md
data-parse/card/14_iM 어디로든 그린카드/: parse_results.html  parse_results.json  parse_results.md
data-pdf-split/card/0_iM Social Worker카드/: 0000_0000.html  0000_0000.json  0000_0000.md  0000_0003.md  0001_0001.html  0001_0001.json  0001_0001.md  0002_0002.html  0002_0002.json  0002_0002.md  0003_0003.html  0003_0003.json  0003_0003.md  0004_0004.html  0004_0004.json  0004_0004.md  0004_0005.html  0004_0005.json  0004_0005.md  0005_0005.html  0005_0005.json  0005_0005.md
data-pdf-split/card/10_DGIST CORPORATE카드_상품안내장(홈페이지)(지정)/: 0004_0005.html  0004_0005.json
data-pdf-split/card/11_DGIST CORPORATE카드_상품안내장(홈페이지)(공용)/: 0004_0005.md
data-pdf-split/card/12_iM biz SKYPASS카드 상품안내장(홈페이지)/: 0004_0005.json
data-pdf-split/card/13_iM biz SKYPASS카드 상품안내장(홈페이지)(법인크레딧)/: 0004_0005.html  0004_0005.md
data-pdf-split/card/14_iM 어디로든 그린카드/: 0004_0005.html  0004_0005.json  0004_0005.md
data-pdf-split/card/15_iM 스카이패스 카드 v2 Gold/: 0004_0005.html  0004_0005.json  0004_0005.md
data-pdf-split/card/16_iM 스카이패스 카드 v2 Silver/: 0004_0005.html  0004_0005.json  0004_0005.md
data-pdf-split/card/17_iM 단디 청소년 후불교통 체크카드/: 0004_0005.html  0004_0005.json  0004_0005.md
data-pdf-split/card/1_iM ONE카드(한국부동산원)/: 0004_0005.html  0004_0005.json  0004_0005.md
data-pdf-split/card/2_iM Z체크카드(한국부동산원)/: 0000_0003.html  0004_0005.html  0004_0005.json  0004_0005.md
data-pdf-split/card/3_iM i카드(한국부동산원)/: 0004_0005.html  0004_0005.json  0004_0005.md
data-pdf-split/card/5_iM A 체크카드(댕라이프)/: 0004_0005.md
data-pdf-split/card/6_iM A 체크카드(댕크라이)/: 0004_0005.html  0004_0005.json
data-pdf-split/card/7_iM special EV카드_상품설명서/: 0000_0003.json  0004_0005.html  0004_0005.json  0004_0005.md
data-pdf-split/card/8_iM special OIL카드_상품설명서/: 0004_0005.html  0004_0005.json  0004_0005.md
data-pdf-split/card/9_iM Special POINT_상품설명서/: 0004_0005.html  0004_0005.json  0004_0005.md
data/card/: ragas_synthetic_data.csv
submit/: baseline.csv
