[tool.poetry]
name = "rag-venv"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

langchain = "^0.2.5"
langchain-openai = "^0.1"
openai = "^1.34"
langchain-anthropic = "^0.1"
langchain-text-splitters = "^0.2"
langchain-community = "^0.2"
langchain-experimental = "^0.0.61"
langchain-huggingface = "^0.0.3"
langchain-elasticsearch = "^0.2"
langchain-upstage = "^0.1"
langchain-chroma = "^0.1"
langchain-cohere = "^0.1"
langchainhub = "^0.1.15"
langgraph = "^0.0"
langsmith = "^0.1"
langchain-teddynote = "^0.0"
huggingface-hub = "^0.23"
deepl = "^1.17.0"
kiwipiepy = "^0.17.1"
konlpy = "^0.6.0"

pandas = "^2.2.2"
rank-bm25 = "^0.2.2"

redis = "^5.0.3"
chromadb = "^0.4.24"

rouge-score = "^0.1.2"

pymupdf = "^1.24.1"
pypdf = "^4.2.0"
pdfplumber = "^0.11.1"
pdfminer-six = "^20231228"
pymupdf4llm = "^0.0"
easyocr = "^1.7.2"

matplotlib = "^3.8.4"
streamlit = "^1.32.2"

unstructured = {version = "0.10.19", extras = ["all-docs"]}
poppler-utils = "^0.1.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
natsort = "^8.4.0"

python-dotenv = "^1.0.1"
pydantic = "^2.7.4"
markdownify = "^0.13.1"
tqdm = "^4.66.5"
pillow = "^10.3.0"
ragas = "^0.1.7"
faiss-gpu-cu12 = "^1.8.0.2"
accelerate = "^1.0.0"
gradio = "^4.44.1"
streamlit-drawable-canvas = "^0.9.3"
nodejs = "^0.1.1"
npm = "^0.1.1"
pymongo = "^4.10.1"
flask = "^3.0.3"
flask-cors = "^5.0.0"
pdf2image = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
