[tool.poetry]
name = "rag-venv"
version = "0.1.2"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

langchain = "^0.2.5"
langchain-text-splitters = "^0.2"
langchain-community = "^0.2"
langchain-experimental = "^0.0.61"
langchain-huggingface = "^0.0.3"
langchainhub = "^0.1.15"
langgraph = "^0.0"
langsmith = "^0.1"
huggingface-hub = "^0.23"
kiwipiepy = "^0.17.1"
konlpy = "^0.6.0"

pandas = "^2.2.2"

rank-bm25 = "^0.2.2"
rouge-score = "^0.1.2"

pymupdf = "^1.24.1"
easyocr = "^1.7.2"

matplotlib = "^3.8.4"
streamlit = "^1.32.2"

unstructured = {version = "0.10.19", extras = ["all-docs"]}
poppler-utils = "^0.1.0"

jupyter = "^1.1.1"
ipykernel = "^6.29.5"

natsort = "^8.4.0"
python-dotenv = "^1.0.1"
pydantic = "^2.7.4"
markdownify = "^0.13.1"
tqdm = "^4.66.5"
pillow = "^10.3.0"
faiss-gpu-cu12 = "^1.8.0.2"
accelerate = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
